# pgin

./: .clang-format  .gitignore  LICENSE  Makefile  README.md  db_doc.md  go.mod
.github/workflows/: .clang-format.yml
backend/: meson.build
backend/include/: colors.h  db.h  server.h
backend/src/: db.c  main.c  meson.build
client/: main.go
client/cmd/chat/: main.go
client/internal/: client.go
client/internal/tui/: ui.go
test/: README.md  main.py  meson.build  test_db.c
